# GlacierCTF2024_writeups

./: README.md
blockchain/drainme/: Dockerfile  Makefile  README.md
blockchain/drainme/challenge/: flag.txt
blockchain/drainme/deployment/: systemd-service.container.template
blockchain/drainme/solution/: Solve.sol  WRITEUP.md  exploit
blockchain/frozen-in-time/: Makefile
blockchain/frozen-in-time/challenge/: flag.txt
blockchain/frozen-in-time/solution/: WRITEUP.md  solve_challenge.py
blockchain/multicaller/: Dockerfile  Makefile
blockchain/multicaller/challenge/: flag.txt
blockchain/multicaller/solution/: WRITEUP.md  solve_challenge.py
blockchain/voteme/: Dockerfile  Makefile  notes.md
blockchain/voteme/challenge/: flag.txt
blockchain/voteme/solution/: Dockerfile  Solve.sol  WRITEUP.md  exploit
crypto/aes_chal/: Dockerfile  Makefile
crypto/aes_chal/challenge/: challenge.py  flag.txt
crypto/aes_chal/solution/: Dockerfile  WRITEUP.md  exploit  requirements.txt
crypto/rsag/: Makefile
crypto/rsag/challenge/: challenge.py  flag.txt
crypto/rsag/solution/: Dockerfile  WRITEUP.md  solve.sage
crypto/signmeup/: Makefile
crypto/signmeup/challenge/: .gitignore  flag.txt
crypto/signmeup/solution/: Dockerfile  WRITEUP.md  exploit  requirements.txt
misc/findme/: Makefile
misc/findme/challenge/: base.xcf  chall_generator.py  flag.txt
misc/findme/solution/: WRITEUP.md  requirements.txt  solve.py
misc/frost/: Dockerfile  Makefile
misc/frost/challenge/: challenge  flag.txt  meson.build  requirements.txt
misc/frost/solution/: Dockerfile  WRITEUP.md  exploit  subroutine.f90
misc/korra/: Dockerfile  Makefile
misc/korra/challenge/: flag.txt
misc/korra/solution/: Dockerfile  WRITEUP.md  exploit
misc/schrodinger-compiler/: Dockerfile  Makefile
misc/schrodinger-compiler/challenge/: entrypoint.sh  flag.txt
misc/schrodinger-compiler/solution/: WRITEUP.md  exploit
misc/typstastic/: Dockerfile  Makefile
misc/typstastic/challenge/: entrypoint.sh  flag.txt
misc/typstastic/solution/: Dockerfile  WRITEUP.md  exploit
mobile/icyslide/: solve.py  todos.txt
mobile/icyslide/icyslide/: Makefile
mobile/icyslide/web_server/: config.py  test.py
pwn/LetterBox/: Makefile
pwn/LetterBox/challenge/: flag.txt
pwn/LetterBox/helper/: run.sh
pwn/LetterBox/solution/: WRITEUP.md  exploit_dev
pwn/genie_in_an_elf/: .gitignore  DESC  Dockerfile  Makefile
pwn/genie_in_an_elf/challenge/: Makefile  flag.txt  main.c
pwn/genie_in_an_elf/solution/: .gitignore  Dockerfile  WRITEUP.md
pwn/snow_globe/: .gitignore  DESCRIPTION  Makefile
pwn/snow_globe/challenge/: .gitignore  CMakeLists.txt  Dockerfile  extractor.c  flag.txt  flake.nix  globe_wrapper.c  prepare_test_image.sh  snow_globe.c  snow_globe_meta.h
pwn/snow_globe/deployment/: systemd-service.container.template
pwn/snow_globe/helper/: run.sh
pwn/snow_globe/solution/: Dockerfile  WRITEUP.md  create_iptc.py  exploit  lib.c
pwn/static-notes/: Dockerfile  Makefile  flake.nix
pwn/static-notes/.direnv/: flake-profile-1-link
pwn/static-notes/challenge/: .gitignore  flag.txt
pwn/static-notes/solution/: .gdb_history  Dockerfile  challenge  challenge.b64  exploit  payload.json
pwn/wasmwbw/: Dockerfile  Makefile  flake.nix
pwn/wasmwbw/challenge/: flag.txt
pwn/wasmwbw/solution/: Dockerfile  Makefile  WRITEUP.md  build_rop.py  exploit  payload.wasm  payload.wasm.base64  payload.zig
rev/WeirdRedundancy/: Makefile
rev/WeirdRedundancy/challenge/: Makefile  challenge.c  flag.txt  go.mod  weird_redundancy.go
rev/critifcallyacclaimed/: Dockerfile  Makefile
rev/critifcallyacclaimed/challenge/client/: Cargo.toml  mechanics.yml  test.bson
rev/critifcallyacclaimed/challenge/client/src/: main.rs
rev/critifcallyacclaimed/challenge/server/: Cargo.toml
rev/critifcallyacclaimed/challenge/server/src/: main.rs  silent.rs
rev/ksmaze/: Dockerfile  Makefile
rev/ksmaze/challenge/: Makefile  (+1 more)
rev/ksmaze/challenge/kmaze/: CMakeLists.txt  ksmaze
rev/ksmaze/challenge/kmaze/include/: utils.h
rev/ksmaze/challenge/kmaze/src/: main.cpp
rev/ramo/: Makefile
web/SkiData/: Dockerfile  Makefile
web/fuzzybytes/: Makefile
web/glacierchat/: Makefile
(+171 files in other folders)
