[package]
name = "critically_acclaimed_client"
version = "0.1.0"
edition = "2021"

[dependencies]
critically_acclaimed_lib = { path = "../shared", features = ["serialize", "deserialize", "debug"]}
bson = "2.13.0"
serde = "1.0.215"
serde_json = { version = "1.0.133" }
serde_yml = "0.0.12"

[features]
