[package]
name = "critically_acclaimed_server"
version = "0.1.0"
edition = "2021"

[dependencies]
critically_acclaimed_lib = { path = "../shared", features = ["serialize", "deserialize"]}
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.41.1", features = ["full"] }
flate2 = "1.0.35"
bson = "2.13.0"
base64 = "0.22.1"
serde_yml = "0.0.12"

[features]
silent = []
ipv4 = []
